--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,22 @@ nav {
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
+section {
+  margin: 20px;
+}
+
 .nav--logo {
   max-width: 100%;
 }
 
+.hero {
+  display: flex;
+  flex-direction: column;
+}
+
 .hero img {
-  display: block;
-  margin: 0px auto;
-  width: 395.91px;
-  height: 232px;
+  align-self: center;
+  max-width: 400px;
 }
 
 .hero h1, .hero p {
@@ -25,7 +32,7 @@ nav {
   font-size: 36px;
   font-weight: 600;
   margin-top: 40px;
-  margin-bottom: 16px;
+  margin-bottom: 0px;
 }
 
 .hero p {
