--- a/src/App.css
+++ b/src/App.css
@@ -41,14 +41,37 @@ section {
   color: #222222;
 }
 
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
+
 .card {
   font-weight: 300;
   font-size: 12px;
   color: #222222;
+  flex: 0 0 auto;       
+  display: flex;          
+  flex-direction: column;
+  position: relative;
+}
+
+.card-badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  font-size: 10px;
+  font-weight: 400;
+  border-radius: 2px;
+  padding: 5px 6px;
 }
 
 .card-photo {
   max-width: 175px;
+  border-radius: 9px;
 }
 
 .card-statistic {
